tests/should_fail/result_param.stderr
error: `result` is not allowed as a parameter name
 --> result_param.rs:6:1
  |
6 | pub fn result_arg(result: u32) {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

